--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/config.sample.ini
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/config.sample.ini
@@ -5,6 +5,9 @@
 provider=ado_mssql
 connection_string=Server\=localhost\;Encrypt\=yes\;Database\=ApplicationServer\;User Id\=sa\;Password\=deutsche_polizisten_gaertner_und_floristen\;
 
+[security]
+password_salt=012345678901234567890123456789
+
 [web_interface]
 use_https=1
 port=5979
