--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -395,6 +395,15 @@
     <Compile Include="Security\AccessControl\IAclResource.cs" />
     <Compile Include="Security\AccessControl\IAclRole.cs" />
     <Compile Include="Security\AccessControl\SimpleAcl.cs" />
+    <Compile Include="Security\Cryptography\GeneralHasher.cs" />
+    <Compile Include="Security\Cryptography\HasherBase.SecureString.cs">
+      <DependentUpon>HasherBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Security\Cryptography\HasherBase.cs" />
+    <Compile Include="Security\Cryptography\IHasher.cs" />
+    <Compile Include="Security\Cryptography\IHasher.SecureString.cs">
+      <DependentUpon>IHasher.cs</DependentUpon>
+    </Compile>
     <Compile Include="Security\UsernamePasswordValidator.cs" />
     <Compile Include="Serialization\ISerializer.cs" />
     <Compile Include="Serialization\Json\JsonParameterResult.cs" />
@@ -426,6 +435,7 @@
     <Compile Include="Templates\Text\Html\IHtmlTemplate.cs" />
     <Compile Include="Templates\Text\IStringTemplate.cs" />
     <Compile Include="Templates\Text\StringTemplateBase.cs" />
+    <Compile Include="Timing\ITimeProvider.cs" />
     <Compile Include="TMApplication.cs" />
     <Compile Include="Data\GlobalConverter.cs" />
     <Compile Include="DisposableBase.cs" />
