--- a/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
@@ -637,6 +637,23 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Security\AccessControl\SimpleAcl.cs">
       <Link>Security\AccessControl\SimpleAcl.cs</Link>
     </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\security\cryptography\GeneralHasher.cs">
+      <Link>Security\Cryptography\GeneralHasher.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\security\cryptography\HasherBase.cs">
+      <Link>Security\Cryptography\HasherBase.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Security\Cryptography\HasherBase.SecureString.cs">
+      <Link>Security\Cryptography\HasherBase.SecureString.cs</Link>
+      <DependentUpon>HasherBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\security\cryptography\IHasher.cs">
+      <Link>Security\Cryptography\IHasher.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Security\Cryptography\IHasher.SecureString.cs">
+      <Link>Security\Cryptography\IHasher.SecureString.cs</Link>
+      <DependentUpon>IHasher.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\security\UsernamePasswordValidator.cs">
       <Link>Security\UsernamePasswordValidator.cs</Link>
     </Compile>
@@ -704,6 +721,9 @@
     </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\templates\text\StringTemplateBase.cs">
       <Link>Templates\Text\StringTemplateBase.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\timing\ITimeProvider.cs">
+      <Link>Timing\ITimeProvider.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\TMApplication.cs">
       <Link>TMApplication.cs</Link>
