--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.SDK/MarcelJoachimKloubert.ApplicationServer.SDK.csproj
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.SDK/MarcelJoachimKloubert.ApplicationServer.SDK.csproj
@@ -74,6 +74,8 @@
     <Compile Include="Modules\SimpleAppServerModuleContext.cs" />
     <Compile Include="Modules\SimpleAppServerModuleInitContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\Cryptography\GeneralPasswordHasher.cs" />
+    <Compile Include="Security\Cryptography\IPasswordHasher.cs" />
     <Compile Include="SimpleAppServerContext.cs" />
     <Compile Include="SimpleAppServerInitContext.cs" />
   </ItemGroup>
