--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,5 @@
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/_rootDir/modules/docdb/config.ini
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataModels/App.Config
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.DocDB/App.Config
+
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/_rootDir/modules/remote_comm/config.ini
