--- a/MarcelJoachimKloubert.CLRToolbox.451/MarcelJoachimKloubert.CLRToolbox.451.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.451/MarcelJoachimKloubert.CLRToolbox.451.csproj
@@ -149,6 +149,9 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Data\IAdoDatabase.cs">
       <Link>Data\IAdoDatabase.cs</Link>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Data\IContentProvider.cs">
+      <Link>Data\IContentProvider.cs</Link>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\data\IConverter.cs">
       <Link>Data\IConverter.cs</Link>
     </Compile>
@@ -445,6 +448,12 @@
       <Link>IO\IConsole.ReadPassword.cs</Link>
       <DependentUpon>IConsole.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IO\IFile.cs">
+      <Link>IO\IFile.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IO\SimpleFile.cs">
+      <Link>IO\SimpleFile.cs</Link>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IO\SystemConsole.cs">
       <Link>IO\SystemConsole.cs</Link>
     </Compile>
@@ -632,6 +641,9 @@
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Security\AccessControl\SimpleAcl.cs">
       <Link>Security\AccessControl\SimpleAcl.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Security\Cryptography\Crc32.cs">
+      <Link>Security\Cryptography\Crc32.cs</Link>
     </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\security\cryptography\GeneralHasher.cs">
       <Link>Security\Cryptography\GeneralHasher.cs</Link>
