--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.SDK/MarcelJoachimKloubert.ApplicationServer.SDK.csproj
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.SDK/MarcelJoachimKloubert.ApplicationServer.SDK.csproj
@@ -60,7 +60,9 @@
     <Compile Include="Data\SQLite\SqliteDatabaseFactoryBase.cs" />
     <Compile Include="Extensions\AppServerExtensionMethods.cs" />
     <Compile Include="Extensions\Objects.cs" />
-    <Compile Include="Extensions\Objects.WebHash.cs" />
+    <Compile Include="Extensions\Objects.WebHash.cs">
+      <DependentUpon>Objects.cs</DependentUpon>
+    </Compile>
     <Compile Include="IAppServerInitContext.cs" />
     <Compile Include="Modules\AppServerModuleBase.StartStopContext.cs">
       <DependentUpon>AppServerModuleBase.cs</DependentUpon>
