--- a/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj
@@ -340,6 +340,17 @@
       <Link>Helpers\CollectionHelper.ToArray.IEnumerable.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CompressionHelper.cs">
+      <Link>Helpers\CompressionHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CompressionHelper.GUnzip.cs">
+      <Link>Helpers\CompressionHelper.GUnzip.cs</Link>
+      <DependentUpon>CompressionHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CompressionHelper.GZip.cs">
+      <Link>Helpers\CompressionHelper.GZip.cs</Link>
+      <DependentUpon>CompressionHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\EnumHelper.cs">
       <Link>Helpers\EnumHelper.cs</Link>
     </Compile>
@@ -836,6 +847,7 @@
     <Compile Include="Extensions\Collections.ToArray.cs">
       <DependentUpon>Collections.cs</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\Compression.cs" />
     <Compile Include="Extensions\IO.CreateDirectoryDeep.cs">
       <DependentUpon>IO.cs</DependentUpon>
     </Compile>
@@ -845,6 +857,12 @@
     </Compile>
     <Compile Include="Extensions\IO.WriteGuid.cs">
       <DependentUpon>IO.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\Compression.GZip.cs">
+      <DependentUpon>Compression.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\Compression.GUnzip.cs">
+      <DependentUpon>Compression.cs</DependentUpon>
     </Compile>
     <Compile Include="Extensions\Net.SetBasicAuth.SecureString.cs">
       <DependentUpon>Net.cs</DependentUpon>
