--- a/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
@@ -48,6 +48,13 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\caching\DelegateCache.CachedItem.cs">
+      <Link>Caching\DelegateCache.CachedItem.cs</Link>
+      <DependentUpon>DelegateCache.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\caching\DelegateCache.cs">
+      <Link>Caching\DelegateCache.cs</Link>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Collections\Generic\DelegateComparer.cs">
       <Link>Collections\Generic\DelegateComparer.cs</Link>
     </Compile>
