--- a/MarcelJoachimKloubert.CLRToolbox.30/MarcelJoachimKloubert.CLRToolbox.30.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.30/MarcelJoachimKloubert.CLRToolbox.30.csproj
@@ -373,6 +373,10 @@
       <Link>Helpers\CollectionHelper.ToArray.IEnumerable.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.ToEnumerableSafe.cs">
+      <Link>Helpers\CollectionHelper.ToEnumerableSafe.cs</Link>
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CompressionHelper.cs">
       <Link>Helpers\CompressionHelper.cs</Link>
     </Compile>
@@ -383,6 +387,25 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CompressionHelper.GZip.cs">
       <Link>Helpers\CompressionHelper.GZip.cs</Link>
       <DependentUpon>CompressionHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.cs">
+      <Link>Helpers\DataHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.ToEnumerable.cs">
+      <Link>Helpers\DataHelper.ToEnumerable.cs</Link>
+      <DependentUpon>DataHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.ToEnumerable.Odbc.cs">
+      <Link>Helpers\DataHelper.ToEnumerable.Odbc.cs</Link>
+      <DependentUpon>DataHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.ToEnumerable.OleDb.cs">
+      <Link>Helpers\DataHelper.ToEnumerable.OleDb.cs</Link>
+      <DependentUpon>DataHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.ToEnumerable.SqlClient.cs">
+      <Link>Helpers\DataHelper.ToEnumerable.SqlClient.cs</Link>
+      <DependentUpon>DataHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\EnumHelper.cs">
       <Link>Helpers\EnumHelper.cs</Link>
