--- a/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
@@ -338,6 +338,10 @@
       <Link>Helpers\CollectionHelper.ToArray.IEnumerable.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.ToEnumerableSafe.cs">
+      <Link>Helpers\CollectionHelper.ToEnumerableSafe.cs</Link>
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CompressionHelper.cs">
       <Link>Helpers\CompressionHelper.cs</Link>
     </Compile>
@@ -348,6 +352,25 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CompressionHelper.GZip.cs">
       <Link>Helpers\CompressionHelper.GZip.cs</Link>
       <DependentUpon>CompressionHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.cs">
+      <Link>Helpers\DataHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.ToEnumerable.cs">
+      <Link>Helpers\DataHelper.ToEnumerable.cs</Link>
+      <DependentUpon>DataHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.ToEnumerable.Odbc.cs">
+      <Link>Helpers\DataHelper.ToEnumerable.Odbc.cs</Link>
+      <DependentUpon>DataHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.ToEnumerable.OleDb.cs">
+      <Link>Helpers\DataHelper.ToEnumerable.OleDb.cs</Link>
+      <DependentUpon>DataHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.ToEnumerable.SqlClient.cs">
+      <Link>Helpers\DataHelper.ToEnumerable.SqlClient.cs</Link>
+      <DependentUpon>DataHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\EnumHelper.cs">
       <Link>Helpers\EnumHelper.cs</Link>
@@ -862,6 +885,10 @@
       <Link>Extensions\Collections.ToArray.cs</Link>
       <DependentUpon>Collections.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Collections.ToEnumerableSafe.cs">
+      <Link>Extensions\Collections.ToEnumerableSafe.cs</Link>
+      <DependentUpon>Collections.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Compression.cs">
       <Link>Extensions\Compression.cs</Link>
     </Compile>
@@ -872,6 +899,25 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Compression.GZip.cs">
       <Link>Extensions\Compression.GZip.cs</Link>
       <DependentUpon>Compression.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Data.cs">
+      <Link>Data\Data.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Data.ToEnumerable.cs">
+      <Link>Data\Data.ToEnumerable.cs</Link>
+      <DependentUpon>Data.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Data.ToEnumerable.Odbc.cs">
+      <Link>Data\Data.ToEnumerable.Odbc.cs</Link>
+      <DependentUpon>Data.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Data.ToEnumerable.OleDb.cs">
+      <Link>Data\Data.ToEnumerable.OleDb.cs</Link>
+      <DependentUpon>Data.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Data.ToEnumerable.SqlClient.cs">
+      <Link>Data\Data.ToEnumerable.SqlClient.cs</Link>
+      <DependentUpon>Data.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\IO.CreateDirectoryDeep.cs">
       <Link>Extensions\IO.CreateDirectoryDeep.cs</Link>
