appserver, cleanups, improvements and fixes
- CHG: code cleanups
- FIX: prevent null reference exceptions in SetBasicAuth()
helper/extension method
- ADD: app server tries to write console output into windows event log
if file output fails

--- a/MarcelJoachimKloubert.CLRToolbox.451/MarcelJoachimKloubert.CLRToolbox.451.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.451/MarcelJoachimKloubert.CLRToolbox.451.csproj
@@ -452,7 +452,8 @@
       <DependentUpon>StringHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\StringHelper.AsStringExtension.cs">
-      <Link>StringHelper.AsStringExtension.cs</Link>
+      <Link>Helpers\StringHelper.AsStringExtension.cs</Link>
+      <DependentUpon>StringHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\StringHelper.cs">
       <Link>Helpers\StringHelper.cs</Link>
